[package]
name = "veifka"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
fjall = "2.2.0"
futures = "0.3.31"
redis-protocol = { version = "5.0.1", features = ["codec", "bytes", "resp2"] }
tempfile = "3.14.0"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
